--- a/stats/report.html
+++ b/stats/report.html
@@ -1,6 +1,6 @@
 
     <div>
       <h1>Analysis output</h1>
-      <div>Team Everton won 18 games.</div>
+      <div>Team Leicester won 18 games.</div>
     </div>
     
