use a static class method to generate a pre-configured instance of MatchReader

--- a/stats/report.html
+++ b/stats/report.html
@@ -1,6 +1,6 @@
 
     <div>
       <h1>Analysis output</h1>
-      <div>Team Leicester won 18 games.</div>
+      <div>Team Southampton won 18 games.</div>
     </div>
     
